Stuck on TypeError bug

--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,11 @@
 :root {
-  --color-light-font: rgb(217 225 250);
-  --color-dark-font: rgb(170, 178, 207);
-  --color-header: rgb(68 77 94);
-  --color-main: rgb(46 52 64);
+  --color-light-font: hsl(225, 77%, 92%);
+  --color-tint-font: hsl(214, 96%, 81%);
+  --color-dark-font: hsl(227, 28%, 64%);
+  --color-header: hsl(219, 16%, 32%);
+  --color-nav: hsl(221, 17%, 26%);
+  --color-main: hsl(220, 16%, 22%);
+  --color-main-dark: hsl(220, 16%, 19%);
 }
 body {
   font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
@@ -22,7 +25,7 @@ header {
   align-items: center;
   position: relative;
   background-color: var(--color-header);
-  color: rgb(162 201 253);
+  color: var(--color-tint-font);
 }
 
 h1 {
@@ -36,15 +39,17 @@ header > svg {
   right: 1rem;
   fill: currentColor;
 }
-#taskHeaderSection {
+#taskHeaderSection,
+#completedTaskHeader {
   display: flex;
   justify-content: space-between;
   border-bottom: 2px solid var(--color-light-font);
   padding: 1rem;
 }
 
-#taskHeader {
-  margin: 0px;
+#taskHeaderSection,
+#taskList {
+  max-width: 800px;
 }
 
 main {
@@ -56,7 +61,7 @@ main {
 nav {
   min-width: 300px;
   max-width: 600px;
-  background-color: rgb(55 62 77);
+  background-color: var(--color-nav);
   padding: 2rem;
 }
 
@@ -90,6 +95,12 @@ nav {
   align-items: center;
   border-bottom: 2px solid var(--color-light-font);
 }
+
+#projects-section h3 {
+  font-size: 1.5rem;
+  color: var(--color-tint-font);
+}
+
 #projectList {
   list-style: none;
   padding: 0px;
@@ -130,8 +141,13 @@ nav {
   padding: 2rem;
 }
 
-.taskElement {
+#tasks h2 {
+}
+
+.taskElement,
+#editTaskContainer {
   border: 1px solid var(--color-light-font);
+  background-color: var(--color-nav);
   border-radius: 4px;
   margin-top: 1rem;
 }
@@ -143,6 +159,10 @@ nav {
 }
 
 .mainTaskContent > h3 {
+  margin: 0px;
+}
+
+#taskHeader {
   margin: 0px;
 }
 
@@ -192,7 +212,7 @@ nav {
 
 [data-task-complete="true"] {
   border: 2px solid var(--color-dark-font);
-  background-color: var(--color-main);
+  background-color: var(--color-main-dark);
 }
 
 .taskNote {
@@ -210,6 +230,33 @@ nav {
   left: -13px;
   top: 5px;
   height: 1.2rem;
+}
+.completed {
+  text-decoration: line-through;
+}
+
+.completedTaskElement {
+  color: var(--color-dark-font);
+  border: 1px solid var(--color-dark-font);
+}
+
+.completedTaskElement svg {
+  fill: var(--color-dark-font);
+}
+
+#editTaskContainer {
+  display: flex;
+  padding: 1rem;
+}
+
+#newTask,
+#newNotes {
+  padding: 0.3rem;
+}
+
+#newNotes {
+  height: 5rem;
+  resize: none;
 }
 
 section {
